# decision-tree

./: .gitignore  README.md  ReleaseNotes.md  example_execution_uv.sh  params.yaml  projects_all_approved_202501091214.csv  projects_all_approved_202502211226.csv  pyproject.toml  pytest.ini  requirements.txt  rule_template.csv  run.py  run_app.py  run_decision_tree.py  runner.py  secrets_template.yaml  setup_uv.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: dev_ci_cd_uv.yml
ARCHIVE/data_OLD/: example_poly_images.csv  tm_api_2025-02-20.csv  tm_api_ARCOS_Birdlife_KENVO_2025-03-05.csv  tm_api_DREK_2025-02-26.csv  tm_api_TEST.csv
ARCHIVE/data_OLD/ARCOS_Birdlife_OLD/: ARCOS_approved_202503061228.csv  invalid_poly_5aa2d8ed-c7e7-4a08-bdbf-e3ee951b32cf_.geojson  tm_api_ARCOS_Birdlife_KENVO_2025-03-05_OLD.csv
ARCHIVE/data_OLD/arcos_birdlife_OLD/: bbd88e69-cd85-429e-bebf-6234bf82dbb3_img_availability_2025-03-05.csv
ARCHIVE/data_OLD/imagery_availability/: comb_img_availability_2025-02-26.csv
ARCHIVE/data_OLD/results/: low_coverage_polygons_2025-03-04.csv  polygon_imagery_coverage_2025-03-04.csv  project_imagery_coverage_2025-03-04.csv
ARCHIVE/src_OLD/: decision_trees.py  image_availability.py  image_coverage.py  visualizations.py
decision_tree/: __init__.py  api_utils.py  canopy_cover.py  constants.py  cost_calculator.py  decision_trees.py  image_availability.py  polygon_decisions.py  process_api_results.py  project_decisions.py  run_decision_tree.py  s3_utils.py  slope.py  slope_new.py  tools.py  update_asana.py  weighted_scoring.py
decision_tree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
decision_tree/legacy/: clean_raw_data.py
decision_tree/visualizations/: barcharts.py  sandbox_visuals.py
decision_tree_src/: api_utils.py  decision_trees.py  image_availability.py  run_decision_tree.py  slope.py  tools.py  weighted_scoring.py
decision_tree_src/visualizations/: barcharts.py
notebooks/: analyze_maxar_img_avail.ipynb  analyze_maxar_img_avail_SCRATCH.ipynb  baseline_ev_img_comparison.ipynb  bef_shortlist.ipynb  cohort1_results.ipynb  cohort2_results.ipynb  darby-tm-api-simple.ipynb  darby-tm-api-simple_ppc.ipynb  darby-tm-api.ipynb  darby-tm-api_OLD.ipynb  decision_tree.ipynb  decision_tree_EDA.ipynb  download_polygons_from_s3.ipynb  indiv-proj-tm-api-pull.ipynb  maxar_img_avail.ipynb  maxar_img_avail_PPC_TC_ELIG.ipynb  maxar_img_avail_SCRATCH.ipynb  maxar_img_avail_SCRATCH_NEW.ipynb  maxar_img_avail_SCRATCH_V1.ipynb  maxar_img_avail_SCRATCH_V2.ipynb  maxar_img_avail_SCRATCH_V3.ipynb  maxar_img_avail_maxar_spenddown.ipynb  maxar_img_cost_estimate.ipynb  polygon-bucketing.ipynb  portfolio_analyses.ipynb  ppc-tm-api-pull.ipynb  ppc_2025_batch1_finalize_polygons.ipynb  project-bucketing.ipynb  review_results.ipynb  scratch.ipynb  slope-calculator.ipynb  tf_portfolio_eda.ipynb  tm-api.ipynb  visualizations.ipynb
notebooks/notebooks_archive/: analyze_maxar_img_avail.ipynb  analyze_maxar_img_avail_SCRATCH.ipynb  baseline_ev_img_comparison.ipynb  darby-tm-api.ipynb  download_polygons_from_s3.ipynb  indiv-proj-tm-api-pull.ipynb  maxar_img_avail_PPC_TC_ELIG.ipynb  maxar_img_avail_SCRATCH_V1.ipynb  maxar_img_avail_SCRATCH_V2.ipynb  ppc-tm-api-pull.ipynb  ppc_2025_batch1_finalize_polygons.ipynb  scratch.ipynb  tf_portfolio_eda.ipynb
notebooks/notebooks_jessica/: decision_tree.ipynb  decision_tree_EDA.ipynb  visualizations.ipynb
src/: analyze_img_coverage.py  api_utils.py  canopy_cover.py  clean_raw_data.py  constants.py  decision_trees.py  geospatial_utils_NEW.py  image_availability.py  image_coverage.py  process_api_results.py  process_tm_api_results.py  sandbox_visuals.py  slope.py  tm_api_utils.py  tools.py  update_asana.py  visualizations.py  visuals_config.py  weighted_scoring.py
src/src_archive/: process_api_results.py  s3_utils.py
src/visualizations/: barcharts.py  visuals_config.py
tests/: conftest.py  dt_test_tools.py  params.yaml  params_full.yaml  params_full_for_tests.yaml  params_id_list.yaml  params_partial.yaml  params_score.yaml  secrets.yaml  test_api_utils.py  test_run_decision_tree.py  test_s3_utils.py  test_tm_api_utils.py  test_tm_utils.py  tools.py
tests/data/: params.yaml
tests/data/decision_tree/: README.md
tests/data/decision_tree/param_files/: params_for_parse_test.yaml  params_full.yaml  params_id_list.yaml  params_partial.yaml  params_projectids.yaml  params_projectids_api.yaml  params_score.yaml
tests/data/decision_tree/test_projects/feats/: tm_api_c1_06-30-2026.csv
tests/data/decision_tree/test_projects/geojsons/: TEST_01_GRI_04-13-2026.geojson
tests/data/source_csv/: comb_img_availability_c1_07-14-2025_two_projects.csv  dtree_output_c1_07-14-2025_exp5_two_projects.csv  prj_ids_c2_10-06-25.csv  rule_template.csv  tm_api_c1_07-14-2025.csv
tests/data/source_geojsons/: 468bee12-bfbc-4387-a00a-d7e915576427_06-30-2025.geojson  KEN_22_EFK_06-30-2025.geojson  RWA_22_ICRAF_06-30-2025.geojson  TGO_22_APAF_07-14-2025.geojson
tests/data/test_projects/test_01_gri/: params_partial.yaml
tests/param_files/: params_for_parse_test.yaml  params_full.yaml  params_id_list.yaml  params_score.yaml
tests/unit_tests/: test_polygon_decisions.py  test_process_api_results.py
(+6 files in other folders)
