[project]
name = "decision-tree"
version = "0.1.0"
description = "Cleaning and analysis scripts for TerraFund portfolio data"
readme = "README.md"
requires-python = ">=3.12.0,<3.13"
dependencies = [
    "asana",
    "boto3",
    "exactextract",
    "fastparquet",
    "fiona",
    "gdal<=3.12 ; sys_platform != 'darwin'",
    "gdal==3.13.1 ; sys_platform == 'darwin'",  # match Homebrew libgdal; bump to `gdal-config --version` if brew upgrades
    "matplotlib",
    "geopandas",
    "pandas",
    "pytest",
    "pytest-xdist",
    "pyyaml",
    "rasterio",
    "requests",
    "seaborn",
    "shapely",
    "tqdm",
    "utm",
    "gri-shared-library",
    "tm-api-utils",
]

[tool.uv.sources]
gri-shared-library = { git = "https://github.com/wri/gri-shared-library.git", branch = "main"}
tm-api-utils = { git = "https://github.com/wri/terramatch-researcher-api.git", branch = "develop"}
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
  { index = "gdal-wheels", marker = "sys_platform == 'darwin'" },
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["decision_tree*"]
exclude = ["notebooks*", "docs*", "tests*"]

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true

[tool.poetry.dependencies]
pyproj = { version = "^3.7.2", extras = ["data"] }  # Includes proj.db file

[tool.env]
# Set PROJ_LIB to the directory where pyproj installs its data files
PROJ_DATA = "${VIRTUAL_ENV}/share/proj"
PROJ_LIB  = "${VIRTUAL_ENV}/share/proj"

#[tool.uv]
## Environment markers with Python *range* semantics:
## - macOS (Intel):    3.12.x only
## - macOS (ARM):      3.12.x only
## - Linux (x86_64):   3.12.x only
##
## Using `>= '3.12' and < '3.13'` ensures all 3.12.* patch releases match,
## while excluding 3.11 and 3.13+.
#
#environments = [
#  # Linux x86_64, Python 3.12.x
#  "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version >= '3.12' and python_version < '3.13'",
#
#  # macOS Intel x86_64, Python 3.12.x
#  "sys_platform == 'darwin' and platform_machine == 'x86_64' and python_version >= '3.12' and python_version < '3.13'",
#
#  # macOS Apple Silicon arm64, Python 3.12.x
#  "sys_platform == 'darwin' and platform_machine == 'arm64' and python_version >= '3.12' and python_version < '3.13'"
#]
